# detech

./: .gitignore  README.md  TODO.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt  server.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/models/: __init__.py  config.py
backend/app/services/: solana.py  streaming.py  swarm.py
backend/models/: schemas.py
backend/routes/: stream.py
backend/utils/: x402.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.jetson-sim  Dockerfile.swarm  docker-compose.yml  mosquitto.conf
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  README.md  demo.sh
frontend/: next.config.js  package-lock.json  tsconfig.tsbuildinfo
frontend/.storybook/: main.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AlertDisplay.tsx  Alerts.tsx  AlertsOverlay.tsx  Stream.stories.tsx  Stream.tsx  StreamControls.tsx
frontend/src/lib/: wallet.ts  webrtc.ts
frontend/src/types/: index.ts
frontend/src/utils/: ws_client.ts
jetson-edge/: pyproject.toml  requirements.txt
jetson-edge/src/: __init__.py  detector.py  main.py  mock_cpu_detector.py  run_with_dummy.py
jetson-edge/src/detectors/: __init__.py  yolo_detector.py
jetson-edge/src/gestures/: __init__.py  gesture_handler.py
jetson-edge/src/mqtt/: __init__.py  mqtt_client.py
jetson-edge/src/utils/: __init__.py  frame_processor.py
release_detech/backend/: __init__.py  server.py
release_detech/backend/app/: __init__.py
release_detech/backend/app/api/: __init__.py
release_detech/backend/app/services/: swarm.py
release_detech/backend/routes/: stream.py
release_detech/frontend/: package.json
release_detech/frontend/.storybook/: preview.tsx
shared/: solana_utils.py
shared/schemas/: __init__.py  alert.py  detection.py
shared/solana/: __init__.py  x402.py
swarm-agents/: pyproject.toml  requirements.txt
swarm-agents/src/: __init__.py  agents.py  main.py
swarm-agents/src/agents/: __init__.py  alert_refiner.py  context_analyzer.py
swarm-agents/src/chains/: refiner.py
swarm-agents/src/prompts/: __init__.py  alert_refiner_prompts.py  context_analyzer_prompts.py
swarm-agents/src/tools/: __init__.py  alert_tools.py
tests/: backend_test.py  swarm_test.py  x402_test.py
tests/backend/: conftest.py  pytest.ini  test_api.py
tests/frontend/: playwright.config.ts
tests/frontend/tests/: stream.spec.ts
tests/integration/: frontend.spec.ts  playwright.config.ts  test_end_to_end.py
